Try tweaking memory allocations for build scan perf tests to avoid hang on CI.